# audio-journal-transcriber

./: .gitignore  .pylintrc  Dockerfile  MANIFEST.in  Pipfile  README.md  build_podman.sh  config.default.toml  config.yaml.example  pyproject.toml  run_podman.sh.example  transcribe.py  transcript_bundle.py  utils.py
.github/workflows/: docker-publish.yml
src/transcriber/: __main__.py  ai_manager.py  audio_manipulation.py  audio_transcriber.py  cli.py  config.py  daemon.py  exception.py  file_watcher.py  logger.py  retry_manager.py  transcribe_bundle.py  transcribe_bundle_job.py  utils.py
transcriber/: __main__.py  ai_manager.py  audio_manipulation.py  audio_transcriber.py  cli.py  config.py  exception.py  globals.py  logger.py  transcribe_bundle.py  transcribe_bundle_job.py  transcribe_bundle_text_file.py  transcribe_job.py  transcript_bundle.py  utils.py
