[project]
name = "audio-journal-transcriber"
version = "0.1.0"
description = "Automated pipeline for transcribing and summarizing personal recordings."
authors = [{ name = "Kelno", email = "kelnowm@gmail.com" }]
requires-python = "==3.12.*"

dependencies = [
  "requests",
  "pyyaml",
  "pydantic",
  "pydantic-settings",
  "coloredlogs",
  "openai",
  "pydub",
  "uv>=0.10.2",
]

[project.scripts]
transcriber = "transcriber.cli:main"

[project.optional-dependencies]
dev = [
   "black",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transcriber = ["*.toml"]

[tool.uv]
package = true

[tool.black]
line-length = 160
