[project]
name = "audio-journal-transcriber"
version = "0.1.1"
description = "Automated pipeline for transcribing and summarizing personal recordings."
authors = [{ name = "Kelno", email = "kelnowm@gmail.com" }]
requires-python = "==3.12.*"

dependencies = [
  "requests",
  "pyyaml",
  "pydantic",
  "pydantic-settings",
  "coloredlogs",
  "openai",
  "pydub",
  "uv>=0.10.2",
]

[project.scripts]
transcriber = "transcriber.cli:main"

[project.optional-dependencies]
dev = [
   "black",
]

[tool.uv]
package = true

[tool.black]
line-length = 160
